fix: leaderboard and stats on mobile

--- a/frontend/gameStyles.css
+++ b/frontend/gameStyles.css
@@ -34,12 +34,17 @@ body {
   padding: 1rem;
   height: 100%;
 }
-
+.row {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+}
 .styledDiv {
   border-radius: 1rem;
   border: 1px solid #0f4255;
   background: #012345cc;
   padding: 1rem;
+  height: fit-content;
 }
 
 .special {
@@ -48,8 +53,8 @@ body {
 
 /* Game Info */
 #gameInfo {
+  flex-direction: column;
   justify-content: space-between;
-  align-items: flex-start;
   pointer-events: none;
 }
 #playerInfo,
